[project]
name = "PyMessageLib"
version = "0.0.0"
description = "A simple Python library for constructing/dissecting messages."
authors = [
    "Sam Badger <smalbadger@gmail.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.9"
homepage = "https://github.com/smalbadger/pymessagelib"
repository = "https://github.com/smalbadger/pymessagelib"
documentation = "https://github.com/smalbadger/pymessagelib"

keywords = ["message", "builder"]

classifiers = [
    "Development Status :: 1 - Planning",
	"Framework :: Pytest",
	"Intended Audience :: Developers",
	"Intended Audience :: Telecommunications Industry",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.9",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Software Development :: Testing :: Traffic Generation",
	"Topic :: System :: Hardware"
	
]

# Requirements
[dependencies]

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.9" }

[scripts]

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''